--- a/9_backmatter/references.bib
+++ b/9_backmatter/references.bib
@@ -4,14 +4,19 @@
 
 %% Saved with string encoding Unicode (UTF-8) 
 
-
+@book{hohpewoolf2003,
+	author = "Gregor Hohpe, Bobby Woolf",
+	title = "Enterprise Integration Patterns: Designing, Building, and Deploying Messaging Solutions",
+	year = 2003,
+	year = "Addison Wesley"
+}
 
 @article{name06,
 	Author = {Name},
 	Date-Added = {2007-09-06 11:30:06 +0200},
 	Date-Modified = {2007-09-06 11:30:42 +0200},
 	Journal = {Journal of Sth},
-	Title = {Title},
+	Title = {Title 2 2 2 2 },
 	Year = {2006}}
 
 @article{lastname07,
