--- a/9_backmatter/references.bib
+++ b/9_backmatter/references.bib
@@ -8,7 +8,15 @@
 	author = "Gregor Hohpe, Bobby Woolf",
 	title = "Enterprise Integration Patterns: Designing, Building, and Deploying Messaging Solutions",
 	year = 2003,
-	year = "Addison Wesley"
+	publisher = "Addison Wesley"
+}
+
+@book{chappell2004,
+	author= "David A. Chappell",
+	title = "Enterprise Service Bus: Theory in Practice",
+	year = 2004,
+	publisher = "O'Reilly Media"
+
 }
 
 @article{name06,
